feat(api): add endpoint for adding members to kits
